// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineMessage renders with Title 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #E6F4F6;
  border-color: #017582;
  border-style: solid;
  border-radius: 4px;
  border-width: 0 0 0 4px;
  color: #FFFFFF;
  width: 100%;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 12px;
  padding-block-end: 12px;
}

.emotion-0 svg {
  fill: #017582;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-3 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 18px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
  color: #111111;
  margin-bottom: 12px;
}

.emotion-3::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-3::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-3 svg {
  fill: #111111;
}

.emotion-4 {
  margin: 0;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  color: #3B3B3B;
}

.emotion-4::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-4::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-4 svg {
  fill: #3B3B3B;
}

<div
    class="emotion-0"
    data-testid="inline-message"
  >
    <div
      class="emotion-1"
    >
      <div
        aria-live="off"
        class="emotion-2"
        role="region"
      >
        <p
          class="emotion-3"
        >
          Your title here
        </p>
        <p
          class="emotion-4"
        >
          Your message text here
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InlineMessage renders with Title and Icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #E6F4F6;
  border-color: #017582;
  border-style: solid;
  border-radius: 4px;
  border-width: 0 0 0 4px;
  color: #FFFFFF;
  width: 100%;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 12px;
  padding-block-end: 12px;
}

.emotion-0 svg {
  fill: #017582;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  margin-right: 12px;
}

.emotion-2 svg {
  display: block;
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #3B3B3B;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-3 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-3 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-3.emotion-3 {
  width: 24px;
  height: 24px;
}

.emotion-5 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 18px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
  color: #111111;
  margin-bottom: 12px;
}

.emotion-6::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-6::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-6 svg {
  fill: #111111;
}

.emotion-7 {
  margin: 0;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  color: #3B3B3B;
}

.emotion-7::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-7::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-7 svg {
  fill: #3B3B3B;
}

<div
    class="emotion-0"
    data-testid="inline-message"
  >
    <div
      class="emotion-1"
    >
      <div
        aria-hidden="true"
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="emotion-3 emotion-4"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
          />
        </svg>
      </div>
      <div
        aria-live="off"
        class="emotion-5"
        role="region"
      >
        <p
          class="emotion-6"
        >
          Your title here
        </p>
        <p
          class="emotion-7"
        >
          Your message text here
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InlineMessage renders with default props 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #E6F4F6;
  border-color: #017582;
  border-style: solid;
  border-radius: 4px;
  border-width: 0 0 0 4px;
  color: #FFFFFF;
  width: 100%;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 12px;
  padding-block-end: 12px;
}

.emotion-0 svg {
  fill: #017582;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-3 {
  margin: 0;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  color: #3B3B3B;
}

.emotion-3::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-3::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-3 svg {
  fill: #3B3B3B;
}

<div
    class="emotion-0"
    data-testid="inline-message"
  >
    <div
      class="emotion-1"
    >
      <div
        aria-live="off"
        class="emotion-2"
        role="region"
      >
        <p
          class="emotion-3"
        >
          Your message text here
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InlineMessage renders with logical prop overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #E6F4F6;
  border-color: #017582;
  border-style: solid;
  border-radius: 4px;
  border-width: 0 0 0 4px;
  color: #FFFFFF;
  width: 100%;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-inline: 50px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-inline: 30px;
  padding-block-start: 12px;
  padding-block-end: 12px;
}

.emotion-0 svg {
  fill: #017582;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  margin-right: 12px;
}

.emotion-2 svg {
  display: block;
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #3B3B3B;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-3 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-3 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-3.emotion-3 {
  width: 24px;
  height: 24px;
}

.emotion-5 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 18px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
  color: #111111;
  margin-bottom: 12px;
}

.emotion-6::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-6::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-6 svg {
  fill: #111111;
}

.emotion-7 {
  margin: 0;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  color: #3B3B3B;
}

.emotion-7::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-7::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-7 svg {
  fill: #3B3B3B;
}

<div
    class="emotion-0"
    data-testid="inline-message"
  >
    <div
      class="emotion-1"
    >
      <div
        aria-hidden="true"
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="emotion-3 emotion-4"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
          />
        </svg>
      </div>
      <div
        aria-live="off"
        class="emotion-5"
        role="region"
      >
        <p
          class="emotion-6"
        >
          Your title here
        </p>
        <p
          class="emotion-7"
        >
          Your message text here
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InlineMessage renders with overrides and all props 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: lightpink;
  border-width: 1px 4px;
  border-color: deeppink;
  border-style: solid;
  border-radius: 3px;
  width: 100%;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-inline: 24px;
  padding-block-start: 12px;
  padding-block-end: 12px;
  padding-block: 24px;
}

.emotion-0 svg {
  fill: deeppink;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  margin-right: 24px;
}

.emotion-2 svg {
  display: block;
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #3B3B3B;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-3 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-3 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-3.emotion-3 {
  width: 24px;
  height: 24px;
}

.emotion-5 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 18px;
  line-height: 20.25px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
  color: #FFFFFF;
  margin-bottom: 24px;
}

.emotion-6::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-6::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-6 svg {
  fill: #FFFFFF;
}

.emotion-7 {
  margin: 0;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  color: #FFFFFF;
}

.emotion-7::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-7::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-7 svg {
  fill: #FFFFFF;
}

<div
    class="emotion-0"
    data-testid="inline-message"
  >
    <div
      class="emotion-1"
    >
      <div
        aria-hidden="true"
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="emotion-3 emotion-4"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
          />
        </svg>
      </div>
      <div
        aria-live="off"
        class="emotion-5"
        role="region"
      >
        <p
          class="emotion-6"
        >
          Your title here
        </p>
        <p
          class="emotion-7"
        >
          Your message text here
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
